--- a/style.css
+++ b/style.css
@@ -12,11 +12,41 @@ nav {
     display: flex;
     justify-content: space-between;
     padding: 0 16px;
+    background-color: #cafdff;
+}
+
+header {
+    background-color: #eadcff;
+    height: calc(100vh - 70px);
+    padding: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+h1 {
+    font-size: 72px;
+}
+
+.subheader {
+    font-size: 36px;
+    font-weight: 700;
+    margin: 16px 0px 24px 0;
+}
+
+button {
+    background-color: #05c7cf;
+    color: white;
+    padding: 8px 16px;
+    border: none;
+    font-size: 24px;
+    cursor: pointer;
 }
 
 a {
     color: black;
     font-size: 24px;
+    font-weight: 700;
 }
 
 .logo {
