--- a/style.css
+++ b/style.css
@@ -24,6 +24,16 @@ header {
     justify-content: center;
 }
 
+.row {
+    width: 100%;
+    display: flex;
+    max-width: 1400px;
+    margin: 0 auto;
+    align-items: center;
+    justify-content: center;
+}
+
+
 h1 {
     font-size: 72px;
 }
@@ -61,4 +71,48 @@ ul {
 li {
     list-style: none;
     padding-left: 24px;
+}
+
+
+/*
+
+ABOUT SECTION
+
+*/
+
+#about {
+    padding: 24px 0;
+    background-color: #f8ffdc;
+}
+
+.aboutitems {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 48px;
+}
+
+h2 {
+    font-size: 60px;
+    text-align: center;
+    margin-bottom: 24px;
+}
+
+.aboutleft {
+    width: 60%;
+    padding: 16px 24px 0 0;
+}
+
+.section__description--para {
+    font-size: 20px;
+    font-weight: 700;
+    margin-bottom: 24px;
+}
+
+.aboutright {
+    width: 40%;
+}
+
+.aboutimage {
+    width: 100%;
 }
