--- a/style.css
+++ b/style.css
@@ -169,3 +169,36 @@ form {
     display: flex;
     flex-direction: column;
 }
+
+input, textarea {
+    margin-bottom: 16px;
+    font-size: 16px;
+    padding: 6px 8px;
+}
+
+/*
+
+FOOTER SECTION
+
+*/
+
+footer {
+    background-color: #aaf5ff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.footerlogo {
+    max-width: 500px;
+    padding: 36px;
+}
+
+.footerlinks {
+    padding: 0px 24px 16px 24px;
+}
+
+.copyright {
+    padding: 24px;
+}
